frontend edit working, still in progress

--- a/client/src/AddDog.css
+++ b/client/src/AddDog.css
@@ -42,7 +42,7 @@
   }
   
   .add-dog-container button:hover {
-    background-color: #45b8bd;
+    background-color: lightgreen;
   }
   
   .add-dog-container p {
