--- a/client/src/ShelterCard.css
+++ b/client/src/ShelterCard.css
@@ -1,45 +1,47 @@
 /* src/components/ShelterCard.css */
-
 .shelter-card {
-  border: 2px solid #ccc;
+  border: 2px solid grey;
   border-radius: 10px;
   padding: 20px;
   margin: 20px;
   text-align: center;
-  max-width: 300px;
+  max-width: 250px;
   display: inline-block;
-  background-color: #f9f9f9;
-  transition: box-shadow 0.3s ease-in-out;
-}
-
-.shelter-card:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .shelter-card h3 {
   margin: 0;
   color: #333;
-  font-size: 1.5em;
-  font-weight: bold;
 }
 
 .shelter-card p {
   color: #666;
-  margin: 10px 0;
-  font-size: 1em;
+  margin: 8px 0;
 }
 
 .shelter-card button {
+  display: block;
+  width: 100%;
   padding: 8px 16px;
-  background-color: #e74c3c;
+  background-color: #5ce1e6;
   border: none;
   border-radius: 4px;
   color: white;
   cursor: pointer;
   font-size: 16px;
-  margin-top: 10px;
+  margin-top: 8px;
 }
 
 .shelter-card button:hover {
-  background-color: #c0392b;
+  background-color: #45b8bd;
+}
+
+.shelter-card .edit-button {
+  background-color: lightgreen;
+  margin-top: 0;
+}
+
+.shelter-card .delete-button {
+  background-color: #ff3333;
+  margin-top: 8px;
 }
