--- a/client/src/EditDog.css
+++ b/client/src/EditDog.css
@@ -1,17 +1,15 @@
 /* src/components/EditDog.css */
-
 .edit-dog-container {
+    margin: 20px auto;
     padding: 20px;
-    max-width: 600px;
-    margin: 0 auto;
+    max-width: 500px;
     background-color: #f9f9f9;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    border-radius: 5px;
   }
   
-  .edit-dog-container h1 {
+  .edit-dog-container h2 {
     text-align: center;
-    margin-bottom: 20px;
     color: #333;
   }
   
@@ -21,50 +19,39 @@
   }
   
   .edit-dog-container label {
-    margin-bottom: 5px;
-    font-weight: bold;
+    margin-top: 10px;
     color: #555;
   }
   
   .edit-dog-container input[type="text"],
-  .edit-dog-container input[type="datetime-local"],
-  .edit-dog-container input[type="number"],
-  .edit-dog-container input[type="checkbox"] {
-    margin-bottom: 15px;
+  .edit-dog-container input[type="checkbox"],
+  .edit-dog-container button {
+    margin-top: 5px;
     padding: 10px;
     border: 1px solid #ddd;
-    border-radius: 4px;
-  }
-  
-  .edit-dog-container input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
+    border-radius: 3px;
+    font-size: 16px;
   }
   
   .edit-dog-container button {
-    padding: 10px 20px;
     background-color: #5ce1e6;
-    border: none;
-    border-radius: 4px;
     color: white;
     cursor: pointer;
-    font-size: 16px;
-    margin-top: 10px;
+    transition: background-color 0.3s ease;
+    margin-top: 15px;
   }
   
   .edit-dog-container button:hover {
-    background-color: lightgreen;
+    background-color: #45b8bd;
   }
   
   .edit-dog-container .error-message {
-    color: red;
+    color: #e74c3c;
     margin-top: 10px;
-    text-align: center;
   }
   
   .edit-dog-container .success-message {
-    color: green;
+    color: #2ecc71;
     margin-top: 10px;
-    text-align: center;
   }
   
