--- a/client/src/AddShelter.css
+++ b/client/src/AddShelter.css
@@ -3,7 +3,7 @@
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid grey;
     border-radius: 8px;
     background-color: #f9f9f9;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -33,7 +33,7 @@
   
   .add-shelter-container button {
     padding: 10px;
-    background-color: #5ce1e6;
+    background-color: darkcyan;
     border: none;
     border-radius: 4px;
     color: white;
@@ -42,11 +42,11 @@
   }
   
   .add-shelter-container button:hover {
-    background-color: #45b8bd;
+    background-color: #5ce1e6;
   }
   
   .add-shelter-container p {
-    color: red;
+    color: #ff6666;
     text-align: center;
   }
 
