--- a/client/src/DogCard.css
+++ b/client/src/DogCard.css
@@ -23,7 +23,7 @@
   display: block;
   width: 100%;
   padding: 8px 16px;
-  background-color: darkcyan;
+  background-color:#5ce1e6;
   border: none;
   border-radius: 4px;
   color: white;
@@ -33,7 +33,7 @@
 }
 
 .dog-card button:hover {
-  background-color: #5ce1e6;
+  background-color: lightgreen;
 }
 
 .dog-card .delete-button {
@@ -46,10 +46,10 @@
 }
 
 .dog-card .edit-button {
-  background-color: darkcyan;
+  background-color: #5ce1e6;
   margin-top: 8px;
 }
 
 .dog-card .edit-button:hover {
-  background-color: #5ce1e6;
+  background-color: darkcyan;
 }
